--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <span class="text-box__line"><i class="fa-solid fa-pause"></i></span>
       <!-- <i class="fa-solid fa-dice-five"></i> -->
-      <button href="#" class="round-button"><img src="/images/icon-dice.svg" alt="icon dice" /></button>
+      <button href="#" class="round-button"><img src="images/icon-dice.svg" alt="icon dice" /></button>
     </div>
   </main>
   <div class="attribution">
