--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
           doloribus sapiente, natus accusamus deserunt modi."</p>
       </div>
       <span class="text-box__line"><i class="fa-solid fa-pause"></i></span>
-      <!-- <i class="fa-solid fa-dice-five"></i> -->
-      <button href="#" class="round-button"><img src="images/icon-dice.svg" alt="icon dice" /></button>
+      <button href="#" class="round-button"><i class="fa-solid fa-dice-five"></i></button>
     </div>
   </main>
   <div class="attribution">
